--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "@testing-library/user-event": "^12.8.3",
     "firebase": "^8.6.8",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^3.0.4",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "simple-peer": "^9.11.0",
+    "socket.io-client": "^4.1.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
